Fix overflow on mobile

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -138,7 +138,9 @@ a.card {
   padding-bottom: 0;
 
   height: 500px;
+  word-break: break-word;
   overflow-y: auto;
+  -webkit-overflow-scrolling: touch;
 
   & > div {
     display: flex;
